2006-08-17  Hendrik Tews  <tews@debian>

	* changed to native ocaml compilation (still need to clean up
	  Makefiles) 

	ELSA
	* fixed ocaml_val init in STemplateArgument

	Semantic
	* ast_graph 36/40, regression tests finished
	  the remaining 4 functions are not connected

	* new regression test regtest-oast uses check-oast to typecheck
	  the ocaml ast
	* checked for all regression tests except big/*

2006-08-16  Hendrik Tews  <tews@debian>

	ELSA
	* ocaml_max_annotation for statistics
	* added 'a to sTemplateArgument

	SEMANTIC
	* adoption and small fixes
	
2006-08-16  Hendrik Tews  <tews@debian>

	* ast_graph (32/40)

2006-08-12  Hendrik Tews  <tews@debian>

	* solved recursion problem with dense_set.ml
	* ast_graph (24/40)

2006-08-11  Hendrik Tews  <tews@debian>

	* ast_graph (21/40), hit recursion problem

	ELSA
	* added string_of_ functions for some of the enums used in the ast

	SEMANTIC
	* ast_graph (20/40)

2006-08-10  Hendrik Tews  <tews@debian>

	ELSA
	* accessor functions for annotation type
	* string_of_declFlags

	SEMANTIC
	* further ast_graph hacking (5/40)

2006-08-09  Hendrik Tews  <tews@debian>

	ELSA
	* changed annotation type to int * int (id, addr >> 1)
	
	Semantic
	* ast_graph started

	* adopted programs to changed ast
	  dumpast : doesn't make sense for recursive asts
	  hashloc : fails for cyclic ast's

2006-08-08  Hendrik Tews  <tews@debian>

	ELSA
	* 'a annotation finished, regression test passed

2006-08-08  Hendrik Tews  <tews@tandem.cs.ru.nl>

	AST
	* treat 'a in toOcaml

	ELSA
	* added annotation to some of the ctype/variable classes

2006-08-08  Hendrik Tews  <tews@debian>

	AST
	* added 'a to generated constructor callbacks

	ELSA
	* fixed missing 'a for variable, cType and co
	* started ast_annotation module

2006-08-07  Hendrik Tews  <tews@debian>

	AST
	* make GrammarLexer backward compatible: elkhound can ignore
	  second embedded processor
	* ast option polymorphicOcamlAST takes options now: the list of